--- a/style.css
+++ b/style.css
@@ -38,10 +38,12 @@ h1 {
   margin-bottom: -5px;
   text-align: left;
 }
-.day {
+.daytext {
   font-family: "Noto Sans Mono", monospace;
   font-weight: bolder;
   text-align: left;
+  margin-top: 10px;
+  line-height: 20px;
 }
 .temperaturenow {
   font-family: "Roboto", sans-serif;
@@ -53,9 +55,10 @@ h1 {
   font-size: 11px;
   font-weight: bold;
   text-align: left;
+  line-height: 20px;
 }
 .forecast {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 h6 {
   font-family: "Roboto", sans-serif;
@@ -103,4 +106,8 @@ a:hover {
 
 .temperaturenow .active:hover {
   text-decoration: none;
+}
+
+.fulldescription {
+  font-size: 11px;
 }
